--- a/frontend/src/stylesheets/FormView.css
+++ b/frontend/src/stylesheets/FormView.css
@@ -5,3 +5,13 @@
 #add-form {
   text-align: center;
 }
+.alert-danger{
+  color: red;
+  font-size: 10px;
+}
+.alert-success{
+  margin-top: 10px;
+  color: green;
+  font-size: 15px;
+  font-weight: bold;
+}
