--- a/frontend/src/stylesheets/Question.css
+++ b/frontend/src/stylesheets/Question.css
@@ -12,6 +12,10 @@
   width: 60%;
 }
 
+.categories-list li{
+  cursor: pointer;
+}
+
 .questions-list {
   flex-basis: 75%;
   text-align: center;
@@ -51,6 +55,7 @@
   color: white;
   padding: 3px 5px;
   margin-left: 0px !important;
+  cursor: pointer;
 }
 
 span.page-num {
@@ -60,6 +65,7 @@ span.page-num {
   font-weight: bolder;
   text-decoration: underline;
   font-size: 16px;
+  cursor: pointer;
 }
 
 span.page-num.active {
@@ -72,4 +78,5 @@ img.category {
 
 img.delete {
   width: 20px;
+  cursor: pointer;
 }
